--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/menus.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/menus.yml
@@ -335,8 +335,6 @@ bossKSLM:
             row: 0
             col: 4
             name: §r[信息] 史莱姆王
-            lore:
-            - §rBGM：
         summon:
             row: 1
             col: 1
@@ -689,7 +687,7 @@ bossSLMG:
             name: §r[信息] 攻击方式-第二阶段
             lore:
             - §r第二阶段时，BOSS的攻击方式如此循环：
-            - §r- 快速发射预判弹幕；每次发射一枚
+            - §r- 快速根据玩家的加速度发射预判弹幕；每次发射一枚
             - §r- 进行一次预判冲撞
             - §r此时击败仅剩的本体即可结束战斗
         tutorial1:
@@ -698,12 +696,14 @@ bossSLMG:
             name: §r[信息] 打法攻略
             lore:
             - §r天蓝，熔岩与骷髅王后可制作的死灵套装均有不错的表现
-            - §r火箭靴，跳跃之瓶等饰品能极大地帮助躲避弹幕
+            - §r火箭靴/天羽之翼，气球束等饰品能极大地帮助躲避弹幕
             - §r利用本BOSS学习如何骗预判将极大地帮助挑战中后期BOSS
             - §r亦可观察根据当前移动方向预判而来的弹道以便及时变向
-            - §r克苏鲁之眼盾的冲撞能力能在关键时刻弥补走位失误
-            - §r尽可能不要受到伤害；本BOSS的所有弹幕和史莱姆之神本体都会造成扭曲DEBUFF
-            - §r扭曲DEBUFF会极大限制走位能力与空间
+            - §r尽可能使用克苏鲁之眼盾的冲撞来躲避第一阶段BOSS的直冲
+            - §r即将进入第二阶段时注意观察BOSS位置
+            - §r第二阶段时频繁在AD之间切换骗预判弹幕，利用冲刺躲避冲撞
+            - §r尽可能不要受到伤害；本BOSS的所有弹幕和史莱姆之神本体都有概率造成扭曲DEBUFF
+            - §r扭曲DEBUFF会极大限制垂直方向走位空间
         back:
             row: 5
             col: 4
@@ -934,6 +934,8 @@ bossSLMQ:
             - §r尽量考虑易于清理小怪的武器以免手忙脚乱
             - §r血肉之墙后的各种环境有全新的掉落物以及合成的物品
             - §r光明/暗影钥匙召唤的宝箱怪也会掉落强力武器和饰品
+            - §r在BOSS进行下砸攻击前稍微离开地面（速度要合理，避免被BOSS径直撞到）
+            - §r在BOSS进行下砸攻击时下落并冲刺躲避
         back:
             row: 5
             col: 4
@@ -1087,7 +1089,8 @@ bossCYGN:
             - §r史莱姆皇后掉落的水晶刺客套装可以提供冲刺，解放克苏鲁之眼盾的饰品栏
             - §rBOSS和弹幕会造成冷冻DEBUFF，短时间内减少大量移动能力，注意躲避
             - §r由于BOSS的冰川护盾，尽可能将火力集中在护盾破损时造成有效输出
-            - §r躲避六角形弹幕时横向移动也十分有效
+            - §r躲避六角形弹幕时左右抖动可骗预判降低难度
+            - §r注意与BOSS的冲刺终点始终保持合理的距离
             - §r第四阶段最为轻松，可酌情考虑暂缓攻击BOSS等待状态恢复
         back:
             row: 5
@@ -1126,7 +1129,7 @@ bossAQSCG:
             lore:
             - §r挑战前建议建造出大型平台（建议使用玻璃平台物品）提供走位空间
             - §r若已战胜双子魔眼，秘银套装是不错的选择
-            - §r若已战胜双子魔眼和极地之灵，代达罗斯套装和代达罗斯守卫法杖效果拔群
+            - §r若已战胜双子魔眼和极地之灵，代达罗斯套装效果拔群
             - §r使用对群能力较强的武器；对单类武器输出极其乏力
             - §r与其余长直类敌人相同，尽可能避免被头部直接命中
         back:
@@ -1224,7 +1227,8 @@ bossBSELMT:
             lore:
             - §r- 试图漂浮在玩家上方
             - §r- 试图预判玩家的移动位置并显示射线瞄准方向
-            - §r- 一秒后发射真正的激光并造成伤害判定
+            - §r- 经过两次提示后发射真正的激光并造成伤害判定
+            - §r- 播放音效时BOSS血条也会变色；激光于血条颜色变回黄色时射出
             - §r- 发射三次后进入下一攻击模式
         tutorial1:
             row: 3
@@ -1234,9 +1238,9 @@ bossBSELMT:
             - §r挑战前建议清理出硫火之崖的地面提供走位空间
             - §r若已战胜两个机械BOSS，精金套装和武器是很好的选择
             - §r代达罗斯套装也可供选择
-            - §r漂浮模式：保持适当的移动速度，以免被滞留爆炸弹击中
+            - §r漂浮模式：保持略微变向移动，不要直线折返以免被滞留爆炸弹击中
             - §r悬浮模式：保持适当的距离，过近会导致六角星弹幕难以躲避，过远会导致深渊亡魂拥有疯狂的速度
-            - §r激光模式：保持变向移动，使BOSS的激光预判出现误差
+            - §r激光模式：在BOSS血条第三次变红时冲刺，变黄后反向移动骗预判
             - §r可考虑使用镇静药水、禅定药水等方式进一步减少小怪对BOSS战的干扰
         back:
             row: 5
@@ -1298,7 +1302,7 @@ bossSKLTP:
             name: §r[信息] 攻击方式-机械炮
             lore:
             - §r发射火箭，在单发与大量齐射之间交替进行
-            - §r火箭会在发射半秒后瞄准玩家方向；在短暂延迟后急速飞行并爆炸
+            - §r火箭会在发射半秒后急速飞行并爆炸
             - §r随存活的手数量减少，发射频率大幅增加
         tutorial1:
             row: 3
@@ -1351,7 +1355,7 @@ bossPLTR:
             - §r此时玩家应当击败机械三王，可以使用神圣锭和叶绿锭制作的武器护甲
             - §rBOSS战大部分时间建议使用强对单武器；清理触手时对群武器也同样重要
             - §r大量的触手会变相增加BOSS冲刺时的碰撞范围
-            - §r由于BOSS的低速度，硫磺火元素掉落的地狱降临拥有夸张的输出上限
+            - §r由于BOSS倾向于跟随玩家，硫磺火元素掉落的地狱降临拥有夸张的输出上限
             - §r可考虑使用镇静药水、禅定药水等方式进一步减少小怪（特指世纪之龟）对BOSS战的干扰
         back:
             row: 5
@@ -1379,8 +1383,12 @@ bossCLMTC:
             col: 1
             name: §r[信息] 攻击方式-常态
             lore:
+            - §r兄弟重生阶段前：
             - §r- 在玩家上方发射爆炸弹
             - §r- 在玩家水平方向发射深渊亡魂
+            - §r兄弟被击败后：
+            - §r- 向玩家预判冲撞
+            - §r- 向玩家发射预判弹幕
             - §r降低到70%生命时开启第一轮弹幕炼狱
             - §r降低到40%生命时召唤兄弟
             - §r降低到10%生命时开启第二轮弹幕炼狱
@@ -1411,6 +1419,7 @@ bossCLMTC:
             - §r在“灾祸”存活时，切记留意冲刺次数；第五次冲刺开始后向冲刺反方向移动避免被火球灼烧
             - §r在略微离开地面的位置建造玻璃平台以更好地看清弹幕炼狱
             - §r设置好泰拉瑞亚第三人称视角距离以在弹幕炼狱时获得更好的视野
+            - §r两兄弟被击败后，注意在灾厄之眼冲撞后冲刺保持距离并及时变向躲避预判弹幕
         back:
             row: 5
             col: 4
@@ -1460,6 +1469,7 @@ bossANHTLVT:
             - §r使用战斗+虫潮药水可迅速刷新召唤物敌怪
             - §r保持垂直移动（规避利维坦伤害）的同时进行小幅度水平移动（规避阿娜西塔弹幕）
             - §r可考虑携带备用对群武器以应对大量的利维坦仆从
+            - §r建议饮用鱼鳃药水以便在不慎落水后仍有一战之力
         back:
             row: 5
             col: 4
@@ -1558,9 +1568,12 @@ bossGLM:
             name: §r[信息] 打法攻略
             lore:
             - §r本BOSS的难度来源于丛林神庙的探索；本体难度相对较低
-            - §r丛林神庙的上两层建议脱下靴子进行探索，否则移速相对过快
+            - §r唯一的威胁来源于弹跳的火球；保持垂直和水平移动即可
+            - §r第二阶段时，注意在下落到地面前往后冲刺并保持高速移动
+            - §r尽量让BOSS直射火球的方向和墙体有合适的角度，防止反弹弹幕从身后击中
+            - §r丛林神庙的上两层建议脱下靴子进行探索，防止移速过快
             - §r所有神庙迷宫均可通过跟着右边/左边墙壁一路找到下一层的入口
-            - §r刷取BOSS召唤物时需要战斗、虫潮药水；确保这些药水失效后再挑战BOSS
+            - §r刷取BOSS召唤物时需要战斗、虫潮药水；确保不要带着这些buff开始BOSS战
             - §r可考虑使用镇静药水、禅定药水等方式进一步减少小怪对BOSS战的干扰
             - §r注：可考虑多次击败BOSS以获得石巨人之眼、锯刃镐等重要物品
         back:
@@ -1627,7 +1640,10 @@ bossPBGLAT:
             - §r击败石巨人后获得锯刃镐可以前往深渊挖掘熔渣锭制作渊泉套装
             - §r甲虫套装以及世纪之花/灾厄之眼后的套装也可供选择
             - §r对单和对群的武器建议都要携带；适当地清理仆从可降低BOSS战难度
-            - §r注意在核弹攻击时保持适当距离，距离过远会被爆炸波及
+            - §r在导弹攻击模式时略微向上飞行，利用自由落体-冲刺-向上飞行的方式躲开后续的仆从
+            - §r在第二阶段时注意不要飞太高，否则后续核弹攻击较难躲避
+            - §r导弹攻击模式可以保持较低的移速来保证输出效率（仍需注意仆从的位置）
+            - §r注意在核弹攻击时保持适当距离（自由落体/冲刺），避免被爆炸波及
         back:
             row: 5
             col: 4
@@ -1806,7 +1822,7 @@ bossDKFSR:
             name: §r[信息] 打法攻略
             lore:
             - §r石巨人/瘟疫使者歌莉娅后护甲均可
-            - §r幽魂套装可以为队友提供续航；单人挑战由于坦度过低并不推荐
+            - §r幽魂套装可以为队友提供续航；单人挑战由于坦度和伤害过低不太推荐
             - §r对单武器与高效清理泡泡的武器均有用武之地
             - §r留意骗一二阶段的预判冲刺，不要直线走位
             - §r三四阶段难度相对不高，保持移动即可
@@ -1939,7 +1955,8 @@ bossCLTST:
             - §r尽量不要长时间靠近天花板，防止BOSS传送到墙里
             - §r携带准确的单点武器以打断召唤仪式
             - §r建议携带对群武器处理不慎召唤的幻影弓龙
-            - §r冲刺在BOSS传送后反向使用更易于躲避追踪弹幕
+            - §r不停在飞行（顶天花板可以更快变向）和下落之间切换并在转换时冲刺以保证移速
+            - §r仅在BOSS传送卡墙时略微减少飞行高度对齐时间轴（否则会吃追踪弹）
             - §r可考虑使用镇静药水、禅定药水等方式进一步减少小怪对BOSS战的干扰
         back:
             row: 5
@@ -1968,7 +1985,7 @@ bossASDEUS:
             name: §r[信息] 攻击方式
             lore:
             - §r向玩家移动并在接近后冲撞
-            - §r身体会发射激光和幻星雷
+            - §r身体会发射激光和幻星雷；生命值小于50%时激光会预判发射
             - §r幻星雷会略微追踪玩家并很快停止；消失前会存在较长时间
             - §r生命值降低到50%时分裂成两条星神游龙独立行动
             - §r两条龙通常一上一下交错攻击
@@ -1981,6 +1998,7 @@ bossASDEUS:
             - §r强烈建议使用拥有足够伤害的对群武器来挑战BOSS
             - §r尽量将冲刺用于闪避头部撞击，蠕虫敌人的头部会造成极高伤害
             - §r准备较大的场地用于迂回；避开幻星雷暂未消失的场地
+            - §r尽量不要保持同一方向移动过久，以免被激光命中
             - §r可考虑使用镇静药水、禅定药水等方式进一步减少小怪对BOSS战的干扰
         back:
             row: 5
@@ -2033,7 +2051,7 @@ bossMNLD:
             lore:
             - §r星神游龙后的星幻套装可以提供出色的攻防属性以及一些移速
             - §r尽量使用带有自动追踪能力的武器
-            - §r注意通过垂直/水平变向来躲避预判弹道
+            - §r注意通过来回水平变向来躲避预判弹道
             - §r使用冲刺和快速垂直移动躲避致命激光
             - §r仔细观察BOSS血条颜色来判断克苏鲁真眼的攻击类型
             - §r四柱碎片可以参与制作更高级的治疗药水
@@ -2177,12 +2195,11 @@ bossDGFL:
             col: 1
             name: §r[信息] 打法攻略
             lore:
-            - §r本BOSS旨在为困难模式与月球领主后的BOSS难度之间创造平滑过渡
-            - §r虽不推荐，但本BOSS理论上有可能在月球领主前击败
             - §r月球领主后夜明锭制作的各职业武器，护甲和饰品能够极大地帮助挑战BOSS
             - §r多人挑战时，星云套装的集体BUFF可以提供续航和输出的全方面增强
             - §r注意观察火墙范围，避免受到不必要的龙焰灼烧
             - §r注意及时变向和冲刺晃掉BOSS的冲刺预判
+            - §r第一阶段使用快速水平变向骗预判极为有效
             - §r保持垂直方向的移动可以帮助减少弹幕的威胁
         back:
             row: 5
@@ -2243,8 +2260,7 @@ bossPFGDN:
             lore:
             - §r月球领主后的护甲非常有效
             - §r痴愚金龙后可制作的进升证章可帮助躲避圣晶守卫的激光
-            - §r可考虑使用对群武器，在清理亵渎石的同时伤害到圣晶/神石守卫
-            - §r如此虽减缓了出伤速度，但走位环境会有显著提升
+            - §r保持后撤可显著降低圣晶守卫的晶石弹幕墙难度
             - §r记得假动作骗歪神石和统御守卫的冲刺
             - §r保持高速移动和冲刺来规避统御守卫的爆焱弹幕
             - §r在飞行的顶端和底端（接触地面刷新飞行时间时）使用冲刺可以保持全程高速移动
@@ -2305,8 +2321,9 @@ bossPFGDS:
             lore:
             - §r多次挑战亵渎守卫以练习应对弹幕墙的走位并让击败守卫游刃有余
             - §r在弹幕阶段时保持高速移动、在阵地战阶段时靠近地面并小心走位
-            - §r茧形阶段时可通过保持低于BOSS位置并观察稍侧面的弹道帮助躲避
+            - §r茧形阶段时可通过在地面移动、观察并向侧面弹道的缝隙移动来躲避
             - §r注意亵渎天神的圣之耀光的聚合位置偏下，而亵渎守卫的激光聚合位置为水平方向
+            - §r换言之，可以控制飞行速度并始终略微高于下方射线以躲避圣之耀光
         back:
             row: 5
             col: 4
@@ -2461,9 +2478,11 @@ bossSGNS:
             lore:
             - §r地狱的空间较为狭窄，建议使用雷管等工具平整地面的小土丘
             - §r在岩浆池岸边使用玻璃平台可以替换掉岩浆
+            - §r建议使用雪人炮射出日食时购买的四级火箭炸开天花板（保险起见可炸到基岩层）
             - §r本次BOSS战中，敏捷药水与食物尤为重要
             - §r在两者加成下，翅膀和极乐之庇护足以躲避BOSS最终阶段下大量鬼镰的疯狂追杀
             - §r在鬼镰墙折返时冲撞可以有效地在进行位移的同时躲避鬼镰
+            - §r以平缓的弧形路径飞行亦可帮助躲避折返鬼镰
         back:
             row: 5
             col: 4
@@ -2593,7 +2612,7 @@ bossTOD:
             - §r噬魂幽花后的血炎套装或龙蒿套装均可考虑使用
             - §r垂直方向的移动可以帮助躲避追踪弹幕
             - §r利用冲刺、变向躲避BOSS的冲撞
-            - §r变向躲避且记住漩涡位置；被漩涡吸中后无法逃脱
+            - §r变向躲避且记住漩涡位置；靠近漩涡被吸中后无法逃脱
         back:
             row: 5
             col: 4
@@ -2645,7 +2664,7 @@ bossDOG:
             col: 1
             name: §r[信息] 打法攻略
             lore:
-            - §r通过冲刺躲避BOSS的冲撞攻击
+            - §r通过后撤，下落和冲刺躲避BOSS的冲撞攻击
             - §r在弹幕阶段（BOSS血条变色时）尽快降落到地面以免被追杀
             - §r弹幕阶段时注意看清指示线帮助躲避弹幕
             - §r可考虑多挑战BOSS的仆从为第二阶段做准备
@@ -2739,12 +2758,13 @@ bossYRN:
             - §r在火球圈的垂直方向走位没有意义；需沿着火球圈的方向微调位置
             - §r建议同时留意两轮火球以准备逃生路径
             - §r小心不要碰到停留在原地的龙卷或离开边界获得龙焰DEBUFF
-            - §r稍微留意BOSS冲刺的速度以判断本次冲刺的持续时间
+            - §r龙焰DEBUFF会禁止自然生命再生
             - §r可利用简单的阶段热身和熟悉旋转火球的性质
-            - §r最后阶段建议与BOSS保持中等的距离以避免同时躲避火球和冲刺；多进行横向而非前后移动
             - §r方舟类武器也可提供额外的容错
-            - §r第二阶段BOSS在传送发射火球前保持下落
-            - §r之后阶段BOSS在发射火球前保持后退
+            - §r仔细注意BOSS转换阶段时的吼叫
+            - §r第一阶段在BOSS传送发射火球前上升，随后通过适当下落躲避火球
+            - §r之后阶段在BOSS发射火球前保持后退
+            - §r最后阶段建议与BOSS保持中等的距离以避免同时躲避火球和冲刺；多进行横向而非前后移动
         back:
             row: 5
             col: 4
@@ -2931,13 +2951,14 @@ bossCLMTS:
             lore:
             - §r星流巨械提供的武器和装备可提供一定帮助
             - §r灾坟魔物可用对群武器尽快清理；其他部分建议使用对单武器
-            - §r星流巨械的坐骑可以帮助躲避弹幕炼狱
+            - §r可以通过快速移动躲避弹幕炼狱防止大量弹幕堆积无法走位
+            - §r对走位很自信的话，星流巨械的坐骑可以帮助躲避弹幕炼狱
             - §r躲避深渊亡魂可以在自由落体的时候左右晃
             - §r保持垂直移动以避免被深渊炙炎弹幕贴脸
             - §r常态攻击的手短较为单一且相对容易，可考虑在常态攻击时恢复生命
             - §r兄弟阶段初期同理，可暂缓攻击BOSS以等待状态恢复
-            - §r尽量避免双兄弟同时进入残血状态，这会导致弹幕过多
-            - §r不要一昧地远离冲刺方向，可能导致下次冲刺过后的技能无法躲避
+            - §r尽量避免双兄弟同时进入残血状态，这会导致弹幕过多难以躲避
+            - §r不要一昧地远离冲刺方向，可能导致下次冲刺或释放的技能无法躲避
         back:
             row: 5
             col: 4
