--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
@@ -108,13 +108,14 @@ titleMessages:
 - 泰拉¤瑞亚：ᕕ(@ x @)ᕗ 耐药性 10秒
 - 泰拉瑞亚：40秒，只需要继续拖40秒，40秒之后我一定会马上喝药
 - 泰拉瑞亚：1997年，我学会了开矿车
-- 泰拉瑞亚：灾厄：敢召唤我就三小弟安排你，听到没有
-- 泰拉瑞亚：灾厄：为什么一个怕被虫子吞了的飞蛾比虫子强？
-- 泰拉瑞亚：灾厄：花朵艳丽，终将飘散
-- 泰拉瑞亚：灾厄：欢迎来到灾厄！
-- 泰拉瑞亚：灾厄：查询山猪喝醉没
-- 泰拉瑞亚：灾厄：谁还能玩就削谁
-- 泰拉瑞亚：灾厄：看我回血
+- 泰拉瑞亚：那我问你，那我问你
+- 泰拉瑞亚灾厄：敢召唤我就三小弟安排你，听到没有
+- 泰拉瑞亚灾厄：为什么一个怕被虫子吞了的飞蛾比虫子强？
+- 泰拉瑞亚灾厄：花朵艳丽，终将飘散
+- 泰拉瑞亚灾厄：欢迎来到灾厄！
+- 泰拉瑞亚灾厄：查询山猪喝醉没
+- 泰拉瑞亚灾厄：谁还能玩就削谁
+- 泰拉瑞亚灾厄：看我回血
 deathMessages:
   Generic:
   - <victim> 的肠子被扯出来了
