config tweak & bugfix

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
@@ -667,9 +667,9 @@
   1:
     items:
     - 金币:1:5:0.5
-    - 坠落之星:5:10
+    - 坠星:5:10
     - 星尘:10:20
-    - 陨石锭:1:3
+    - 陨星锭:1:3
   2:
     giveAllItems: false
     items:
@@ -1267,9 +1267,8 @@
       - 惊惧魂刃
     2:
       items:
-      - 灾劫之尖啸
       - 毁灭之灵:10:20
-      - 幻魂:40:50
+      - 灵质:40:50
       - 铂金币:3
       - 至尊治疗药水:5:15
   硫海遗爵:
@@ -1285,7 +1284,6 @@
     2:
       items:
       - 突变松露:1:1:0.3333
-      - 硫海遗爵之鳞:1:1:0.1
       - 铂金币:4
       - 至尊治疗药水:5:15
   神明吞噬者:
