--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -224,6 +224,8 @@
   rarity: 0
 凝胶:
   item: COAL
+  lore:
+  - §r“既美味，又易燃！”
   worth: 100
   rarity: 0
 水晶碎块:
@@ -3024,6 +3026,7 @@ Drew之翼:
   lore:
   - §r左键点击可切换持续挖掘
   - §r右键点击可进行单次挖掘
+  - §r注：右键基岩可在各层世界中往返
   attributes:
     damage: 4
     damageType: Melee
@@ -11354,6 +11357,7 @@ Dodu的手炮:
   item: IRON_NUGGET
   lore:
   - §r造成会摧毁大部分图格的小爆炸
+  - §7▷ 爆炸物：摧毁方块会按照玩家手上的工具和游戏进度进行判定
   attributes:
     damage: 200
     damageType: Arrow
@@ -11367,6 +11371,7 @@ Dodu的手炮:
   item: IRON_NUGGET
   lore:
   - §r造成会摧毁大部分图格的小爆炸
+  - §7▷ 爆炸物：摧毁方块会按照玩家手上的工具和游戏进度进行判定
   - §r“投出去可不是件易事。”
   attributes:
     damage: 200
@@ -11381,6 +11386,7 @@ Dodu的手炮:
   item: IRON_NUGGET
   lore:
   - §r造成会摧毁大部分图格的大爆炸
+  - §7▷ 爆炸物：摧毁方块会按照玩家手上的工具和游戏进度进行判定
   attributes:
     damage: 500
     damageType: Arrow
@@ -11394,6 +11400,7 @@ Dodu的手炮:
   item: IRON_NUGGET
   lore:
   - §r造成会摧毁大部分图格的大爆炸
+  - §7▷ 爆炸物：摧毁方块会按照玩家手上的工具和游戏进度进行判定
   - §r“投出去可不是件易事。”
   attributes:
     damage: 500
@@ -11915,7 +11922,8 @@ Dodu的手炮:
 二级火箭:
   item: BLAZE_POWDER
   lore:
-  - §r爆炸会摧毁图格
+  - §r部分发射器的爆炸会摧毁图格
+  - §7▷ 爆炸物：摧毁方块会按照玩家手上的工具和游戏进度进行判定
   attributes:
     damage: 80
     damageType: Rocket
@@ -11933,7 +11941,8 @@ Dodu的手炮:
 四级火箭:
   item: BLAZE_POWDER
   lore:
-  - §r爆炸会摧毁图格
+  - §r部分发射器的爆炸会摧毁图格
+  - §7▷ 爆炸物：摧毁方块会按照玩家手上的工具和游戏进度进行判定
   attributes:
     damage: 130
     damageType: Rocket
