clam spawning bugfix & balance bugfix

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -75,6 +75,9 @@
         - "铜币:200:1000:1"
         - "沉沦渊石:1:4:1"
         - "棱晶碎片:2:3:1"
+肉后蛤:
+    drop:
+        - "软体动物外壳:1:1:0.5"
 富养鳐鱼:
     drop:
         - "铜币:300:1250:1"
