--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/recipes.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/recipes.yml
@@ -6349,6 +6349,12 @@ TINKER_WORKBENCH:
     - 猎魂鲨牙:10
     - 深渊细胞:15
     recipeCategory: ARMOR
+  '160_1':
+    requireLevel: 1
+    resultItem: 坠星
+    requireItem:
+    - 星尘:5
+    recipeCategory: MATERIAL
   '161':
     requireLevel: 1
     resultItem: 炫星锭
