--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
@@ -704,34 +704,34 @@
   1:
     giveAllItems: false
     items:
-    - 寒元锭:2:3
-    - 永恒锭:2:3
-    - 熔渣锭:2:3
-  2:
-    giveAllItems: false
-    items:
-    - 混乱核心:1:3
-    - 冰川核心:1:3
-    - 日光核心:1:3
-死灵晶簇:
-  1:
-    giveAllItems: false
-    items:
-    - 寒元锭:7:12
-    - 永恒锭:7:12
-    - 熔渣锭:7:12
+    - 寒元锭:5:15
+    - 永恒锭:5:15
+    - 熔渣锭:5:15
   2:
     giveAllItems: false
     items:
     - 混乱核心:2:4
     - 冰川核心:2:4
     - 日光核心:2:4
+死灵晶簇:
+  1:
+    giveAllItems: false
+    items:
+    - 寒元锭:7:20
+    - 永恒锭:7:20
+    - 熔渣锭:7:20
+  2:
+    giveAllItems: false
+    items:
+    - 混乱核心:3:5
+    - 冰川核心:3:5
+    - 日光核心:3:5
   3:
     items:
-    - 灾劫核心:1:1:0.5
-    - 生命合金
-    - 龙蒿锭:6:10
-    - 血石:120:140
+    - 灾劫核心:1:2
+    - 生命合金:4:6
+    - 龙蒿锭:10:24
+    - 血石:96:128
 # 所有专家模式福袋都在下方按克苏鲁之眼福袋的格式写
 专家模式福袋:
   史莱姆王:
@@ -1161,7 +1161,7 @@
   月球领主:
     1:
       giveAllItems: false
-      amountToGive: 2
+      amountToGive: 3
       items:
       - 月亮传送门法杖
       - 七彩水晶法杖
